# circuit-python-collection

./: .gitignore  README.md  convert_to_bin.py  extract_pixels.py  extract_pixels_to_bin.py  pyproject.toml
completed_animations/: README.md
greentree/: README.md  decorators.py  logger.py
greentree/kmk/: key_bindings.py  oled_ssd1306.py
keyboardCode/: oled_display.py  potentiometer_volume.py  volume_potentiometer_oled.py
kmk_example_code/: oled_display.py  potentiometer_volume.py  volume_potentiometer_oled.py
random_sensors/: laser_emitter.py  led_code.py  max30102.py  motion_sensor_code.py  piezo_crystal.py  sound_sensor_code.py
scripts/: running_serial_locally.py
