[project]
name = "circuit-python-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitpython-stubs>=10.1.4",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "devtools>=0.12.2",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff.format]
exclude = ["adafruit-*", "lib/*", ".venv/*"]
